--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -2,6 +2,9 @@
 @import "bootstrap"
 .portfolio-item
   margin-bottom: 25px
+  .title,.cost
+    text-align: center
+
 .thumbnail
   padding: 10px
   img
