--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -18,3 +18,10 @@
 .center
   margin-top: 4%
   margin-left: 5%
+.container
+  width: 100%
+  h3
+    width: 100%
+.row
+  margin-left: 0px
+  margin-right: 0px
