--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -4,7 +4,8 @@
   margin-bottom: 25px
   .title,.cost
     text-align: center
-
+.navbar-right
+  margin-right: 6.5%
 .thumbnail
   padding: 10px
   img
@@ -25,3 +26,138 @@
 .row
   margin-left: 0px
   margin-right: 0px
+
+.header
+  font-family: 'Lato-Regular'
+  font-size: 14px
+  line-height: 1.42857143
+  color: #333
+.header-top-strip
+  height: 50px
+  padding: 8px 0 14px 0
+  background-color: #816263
+  .container
+    height: 50px
+  .header-top-left
+    float: left
+    margin-left: 4%
+    margin-top: 5px
+    ul
+      margin: 0
+      padding: 0
+      li
+        display: inline-block
+        margin-right: 15px
+        font-size: 13px
+        a 
+          font-size: 17px
+          color: #fff
+        .glyphicon.glyphicon-user,.glyphicon.glyphicon-lock
+          span
+            font-size: 10px
+            vertical-align: initial
+            margin-right: 6px
+  .header-right
+    margin-right: 4%
+    float: right
+    margin-top: 5px
+    position: absolute
+    right: 1%
+
+    .box_1
+      img
+        margin-left: 3px
+      p
+        margin-left: 8px
+        float: left
+  .search
+    position: absolute
+    left: 31%
+    width: 40%
+    .form-control
+      display: inline
+      width: auto
+    .textbox
+      width: 84%
+.simpleCart_empty
+  display: inline
+  margin-left: 12px
+  a
+    text-decoration: none
+    font-size: 17px
+    color: #FFC6CF
+.banner
+  background-image: url("banner_img.jpg") no-repeat 0px 0px
+  height: 432px
+.banner-bottom-left
+  float: Left
+  margin: 110px 0px 0px 30px
+  h2
+    font-size: 85px
+    font-weight: 600
+    line-height: 115px
+    color: #816263
+    margin: 0 0 0 100px
+    padding: 0
+    transform: rotate(-15deg)
+    font-family: 'PlayfairDisplay-Regular'
+.navbar-default
+  margin-bottom: 0
+.shop
+  float: right
+  margin-top: 30%
+  a
+    text-decoration: none
+    padding: 12px 20px
+    border: 1px solid #000
+    color: #000
+    font-size: 18px
+    letter-spacing: 2px
+    &:hover
+      color: #fff
+      background-color: #816263
+      border: 1px solid #816263
+.notice
+  margin: 0
+.alert
+  margin: 0
+  padding: 0
+.down
+  padding-left: 6%
+  width: 85%
+  border: solid 1.5px #e6ecea
+  height: 368px
+  margin-left: 6%
+.outer
+  width: 24%
+  height: 320px
+  background-color: #F8F8F8
+  display: inline-block
+  margin-right: 6%
+  margin-top: 2%
+  border: solid 2.1px #E6ECEA
+.inner
+  text-align: center
+  line-height: 30px
+  position: relative
+  top: 10px
+.circle
+  .img
+    width: 200px
+    height: 200px
+    border-radius: 50%
+.gly
+  display: inline
+.clothing , .sports, .garden, .home , .beauty
+  margin-top: 6%
+  h3
+    text-align: center
+    font-family: 'Lato-Regular'
+.carousel-inner
+  text-align: center
+  .item
+    img
+      display: inline-block
+ol
+  list-style-type: none
+
