--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,19 +1,23 @@
-.carousel.slide{:id=>"slide-images", :data => {:ride => "carousel"}}
-  %ol
-    %li.active{:data => {:target => "slide-images", :slide_to => "0"}}
-    %li{:data => {:target => "slide-images", :slide_to => "1"}}
-    %li{:data => {:target => "slide-images", :slid1_to => "2"}}
-  .carousel-inner
-    .item.active
-      = image_tag @latest_offers.first.image_url(:thumb).to_s
-    .item
-      = image_tag @latest_offers.second.image_url(:thumb).to_s
-    .item
-      = image_tag @latest_offers.last.image_url(:thumb).to_s
-  %a.left.carousel-control{:href => "#slide-images", :data => {:slide => "prev"}}
-    %span.glyphicon.glyphicon-chevron-left
-  %a.right.carousel-control{:href => "#slide-images", :data => {:slide => "next"}}
-    %span.glyphicon.glyphicon-chevron-right
+- if @latest_offers.empty?
+  %h3
+    Offers Coming Soon !
+- else
+  .carousel.slide{:id=>"slide-images", :data => {:ride => "carousel"}}
+    %ol
+      %li.active{:data => {:target => "slide-images", :slide_to => "0"}}
+      %li{:data => {:target => "slide-images", :slide_to => "1"}}
+      %li{:data => {:target => "slide-images", :slid1_to => "2"}}
+    .carousel-inner
+      .item.active
+        = image_tag @latest_offers.first.image_url(:thumb).to_s
+      .item
+        = image_tag @latest_offers.second.image_url(:thumb).to_s
+      .item
+        = image_tag @latest_offers.last.image_url(:thumb).to_s
+    %a.left.carousel-control{:href => "#slide-images", :data => {:slide => "prev"}}
+      %span.glyphicon.glyphicon-chevron-left
+    %a.right.carousel-control{:href => "#slide-images", :data => {:slide => "next"}}
+      %span.glyphicon.glyphicon-chevron-right
 .clothing
   %h3
     Latest in Clothing
