--- a/app/views/layouts/_temp.html.haml
+++ b/app/views/layouts/_temp.html.haml
@@ -45,13 +45,13 @@
             %li
               = link_to "Clothing",product_clothing_path
             %li
-              = link_to "Home",product_sports_path
+              = link_to "Home",product_home_path
             %li
-              = link_to "Garden",product_beauty_path
+              = link_to "Garden",product_garden_path
             %li
-              = link_to "Sports",product_home_path
+              = link_to "Sports",product_sports_path
             %li
-              = link_to "Beauty",product_garden_path
+              = link_to "Beauty",product_beauty_path
       %ul.nav.navbar-nav.navbar-right
         %li= link_to "Men",men_products_path
         %li= link_to "Women",women_products_path
