feedback changes made

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -160,4 +160,27 @@
       display: inline-block
 ol
   list-style-type: none
-
+.outer1
+  width: 45%
+  height: 400px
+  background-color: #F8F8F8
+  border: solid 2.1px #E6ECEA
+  position: absolute
+  top: 24%
+  left: 24%
+  .checkbox
+    padding-left: 4%
+  .render
+    padding-left: 3%
+    padding-top: 3%
+.message
+  .jumbotron
+    width: 66%
+    position: relative
+    left: 17%
+    text-align: center
+.thumbnail
+  a
+    img
+      height: 150px
+      width: 150px
