--- a/app/views/wishlist/list.html.haml
+++ b/app/views/wishlist/list.html.haml
@@ -1,6 +1,8 @@
 - if @products.empty?
-  %h3
-    Your wishlist is currently empty!
+  .message
+    .jumbotron
+      %h3
+        Your wishlist is currently empty!
 - else
   %h3.text-center Your Wishlist
   .container
