--- a/app/views/layouts/_temp.html.haml
+++ b/app/views/layouts/_temp.html.haml
@@ -24,7 +24,9 @@
           %p
             .simpleCart_empty
               %a{ href: "/cart"}
-                Your Cart
+                Your Cart(
+                = session[:_cart].length
+                )
           .clearfix
       .clearfix
 .banner-top
