--- a/app/views/layouts/_temp.html.haml
+++ b/app/views/layouts/_temp.html.haml
@@ -25,7 +25,7 @@
             .simpleCart_empty
               %a{ href: "/cart"}
                 Your Cart(
-                - if session[:_cart].empty?
+                - if session[:_cart].nil?
                   0
                 - else
                   = session[:_cart].length
