--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,44 +1,29 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+.outer1
+  .container
+    %h3
+      Edit
+    = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
+      = devise_error_messages!
+      .field
+        = f.label :email
+        = f.email_field :email, autofocus: true,class: "form-control",placeholder: "Email address"
+      - if devise_mapping.confirmable? && resource.pending_reconfirmation?
+        %div
+          Currently waiting confirmation for: #{resource.unconfirmed_email}
+      .field
+        = f.label :password
+        %i (leave blank if you don't want to change it)
+        = f.password_field :password,autocomplete: "off",class: 'form-control',placeholder: "Password"
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :type , 'Are u a Seller?' %><br />
-    <%= f.check_box :type, {},'Seller','Customer'%>
-    </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+      .field
+        = f.label :password_confirmation
+        = f.password_field :password_confirmation, autocomplete: "off",class: 'form-control',placeholder: "Password"
+      .field
+        = f.label :current_password
+        %i (we need your current password to confirm your changes)
+        = f.password_field :current_password, autocomplete: "off",class: 'form-control',placeholder: "Password"
+      .field
+        = f.label :type , 'Are u a Seller?'
+        = f.check_box :type, {},'Seller','Customer'
+      .actions
+        = f.submit "Update",class: 'btn btn-primary'
