--- a/app/views/ratings/_form.html.haml
+++ b/app/views/ratings/_form.html.haml
@@ -2,7 +2,8 @@
   .col-md-8
     = form_for(:rating, url: ratings_create_path) do |f|
       .form-group
-        = hidden_field_tag 'rating[user_id]', current_user.id
+        - if user_signed_in?
+          = hidden_field_tag 'rating[user_id]', current_user.id
       .form-group
         = hidden_field_tag :product_id, params[:id]
       .form-group
